defined table 2 layout

--- a/index.html
+++ b/index.html
@@ -69,12 +69,30 @@
         </tr>
         <tr>
             <td>
-                <table id="innerTable">
+                <table class="innerTable">
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                    </tr>
+                    <tr>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                    </tr>
+                    <tr>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                    </tr>
+                    <tr>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
+                        <td class="innercell"></td>
                     </tr>
                 </table>
             </td>
