added cell colors

--- a/index.html
+++ b/index.html
@@ -71,26 +71,19 @@
             <td>
                 <table class="innerTable">
                     <tr>
-                        <td class="innercell"></td>
-                        <td class="innercell"></td>
-                        <td class="innercell"></td>
-                        <td class="innercell"></td>
-                    </tr>
-                    <tr>
-                        <td class="innercell"></td>
-                        <td class="innercell"></td>
-                        <td class="innercell"></td>
+                        <td class="innercell yellow" colspan="2" rowspan="2"></td>
+                        <td class="innercell purple" rowspan="4"></td>
                         <td class="innercell"></td>
                     </tr>
                     <tr>
                         <td class="innercell"></td>
-                        <td class="innercell"></td>
+                    </tr>
+                    <tr>
+                        <td class="innercell green" rowspan="2"></td>
                         <td class="innercell"></td>
                         <td class="innercell"></td>
                     </tr>
                     <tr>
-                        <td class="innercell"></td>
-                        <td class="innercell"></td>
                         <td class="innercell"></td>
                         <td class="innercell"></td>
                     </tr>
